--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=InnoCov
 spring.sql.init.platform=mysql
-server.port=8081
+server.port=8080
 
 spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
@@ -12,7 +12,7 @@ spring.sql.init.mode=always
 
 spring.datasource.url=jdbc:mysql://localhost:3306/innocovdb
 spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.password=root
 
 server.servlet.context-path=/api
 
