--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=InnoCov
 spring.sql.init.platform=mysql
 server.port=8081
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 
 #spring.jpa.properties.hibernate.format_sql=true
